# intraday-trading-platform

./: .dockerignore  .env.example  .gitignore  AUDIT.md  BACKTESTING_GUIDE.md  COMPREHENSIVE_CLEANUP.bat  Dockerfile  FINAL_AUDIT_COMPLETION_REPORT.md  HEALTH_API_FIXES.md  IDEMPOTENCY_RETRY_REVIEW.md  INSTITUTIONAL_TRADING_PLATFORM_TECHNICAL_DEEP_DIVE.md  LSTM_Trading_Tutorial.ipynb  METRICS_CARDINALITY_REVIEW.md  NEWS_API_SETUP_GUIDE.md  PORT_REFERENCE.md  QUICK_START_GUIDE.md  README.md  RESTART_FULL_PLATFORM.bat  RUNBOOK.md  SENTIMENT_PROVIDER_CONFIGURATION.md  START_TRADING_PLATFORM.bat  STATUS_CHECK.bat  STOP_TRADING_PLATFORM.bat  TESTING_SETUP_COMPLETE.md  UI_UX_IMPLEMENTATION_README.md  VERSION_CONTROL_GUIDE.md  adaptive_learning_system.py  advanced_correlation_modeler.py  advanced_dynamic_stop_optimizer.py  advanced_ml_predictor.py  advanced_volatility_forecaster.py  alpaca_trading_gateway.py  champion_challenger_framework.py  comprehensive_optimization_summary.json  comprehensive_optimization_summary.py  cvar_integrated_order_router.py  data_enhancement_risk_integration.py  diagnose_features.py  docker-compose.yml  dynamic_confidence_manager.py  (+50 more)
.github/workflows/: ci-cd.yml
adapters/: alpaca_client.py  errors.py
api/routers/: health.py  portfolio.py  signals.py  trading.py  websocket.py
backend/: main.py
backend/adapters/: __init__.py  alpaca_client.py  errors.py  fill_simulator.py
backend/api/: __init__.py  metrics_api.py
backend/infra/: __init__.py  auth.py  http_client.py  logging.py  metrics.py  settings.py
backend/services/: __init__.py  broker_service.py  risk_service.py  strategy_runner.py
backup_before_cleanup/: alpaca_trading_gateway.py  simple_health_checker.py
config/: .env.example  platform_config.json
core/: trading_gateway.py
infra/: logging.py  settings.py
infrastructure/docker/: .env.template  Dockerfile.data  Dockerfile.execution  Dockerfile.main  Dockerfile.portfolio  Dockerfile.prediction  Dockerfile.risk  Dockerfile.sentiment  Dockerfile.services  docker-compose.simple.yml  docker-compose.yml  requirements.txt
infrastructure/kubernetes/: data-service.yaml  execution-service.yaml  monitoring-service.yaml  portfolio-service.yaml  prediction-service.yaml  risk-service.yaml  sentiment-service.yaml
infrastructure/scripts/: deploy.sh
models/drift/: baseline_stats.json
monitoring/: prometheus.yml
services/: broker_service.py  risk_service.py
tests/: conftest.py  test_metrics_integration.py  test_parity_regression.py  utils.py
trading-dashboard/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.lenient.json  tsconfig.node.json  vite.config.ts
trading-dashboard/src/: App.tsx
(+43 files in other folders)
